--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <section>
         <div class="w-full grid grid-cols-3 gap-5 m-auto">
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col1
+                Col1 by Dev1
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
                 Col2
