--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
     <section>
         <div class="w-full grid grid-cols-3 gap-5 m-auto">
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col1
+                Col1 By Dev2
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col2
+                Col2 By Dev2
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col3
+                Col3 By Dev2
             </div>
         </div>
     </section>
