--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
                 Col1 by Dev1
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col2
+                Col2 By Main
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col3
+                Col3 By Main
             </div>
         </div>
     </section>
