--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
                 Col2 By Dev1
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col3
+                Col3 By Main
+            </div>
+            <div class="border-blue-200 border-2 h-20 rounded">
+                Col4 By Main
             </div>
         </div>
     </section>
