--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
     <section>
         <div class="w-full grid grid-cols-3 gap-5 m-auto">
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col1 by Dev1 Noenoe
+                Col1 item 1 by Developer1 
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col2 By Dev1 NoeNoe
+                Col2 By Developer1
             </div>
             <div class="border-blue-200 border-2 h-20 rounded">
-                Col3 By Dev1 Noenoe
+                Col3 By  Developer1
             </div>
         </div>
     </section>
